Add dual Servlet and Spring integration artifacts